Closed
Bug 1279986
Opened 9 years ago
Closed 9 years ago
WebGLRenderingContext methods accepting ArrayBufferView do not work with SharedArrayBuffer
Categories
(Core :: Graphics: CanvasWebGL, defect)
Tracking
()
RESOLVED
FIXED
mozilla50
| Tracking | Status | |
|---|---|---|
| firefox50 | --- | fixed |
People
(Reporter: spectralcanine, Assigned: ethlin)
Details
(Whiteboard: [gfx-noted])
Attachments
(1 file, 1 obsolete file)
|
3.12 KB,
patch
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (Windows NT 10.0; WOW64; rv:47.0) Gecko/20100101 Firefox/47.0
Build ID: 20160604131506
Steps to reproduce:
Use WebGLRenderingContext.uniform* methods, with the last argument being a view of a SharedArrayBuffer.
Actual results:
Error: WebGL: uniformMatrix4fv: expected an array of length a multiple of 16, got an array of length 0.
Updated•9 years ago
|
Component: Untriaged → Canvas: WebGL
Flags: needinfo?(jgilbert)
Product: Firefox → Core
Updated•9 years ago
|
Flags: needinfo?(howareyou322)
Whiteboard: [gfx-noted]
Comment 2•9 years ago
|
||
Ethan, please help on this.
Assignee: nobody → ethlin
Flags: needinfo?(howareyou322)
| Assignee | ||
Comment 3•9 years ago
|
||
Make Uniform*, UniformMatrix* and VertexAttrib* accept SharedArrayBuffer.
Attachment #8764092 -
Flags: review?(jgilbert)
Updated•9 years ago
|
Attachment #8764092 -
Flags: review?(jgilbert) → review+
| Assignee | ||
Updated•9 years ago
|
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
| Assignee | ||
Comment 4•9 years ago
|
||
Rebase the patch.
Attachment #8764092 -
Attachment is obsolete: true
| Assignee | ||
Comment 5•9 years ago
|
||
| Assignee | ||
Updated•9 years ago
|
Keywords: checkin-needed
Pushed by cbook@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/6e23273bf350
Make WebGL Uniform*, UniformMatrix* and VertexAttrib* accept SharedArrayBuffer. r=jgilbert
Keywords: checkin-needed
Comment 7•9 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
status-firefox50:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla50
You need to log in
before you can comment on or make changes to this bug.
Description
•