Bug 1279986 - Make WebGL Uniform*, UniformMatrix* and VertexAttrib* accept SharedArrayBuffer. r=jgilbert